Introduce platform setting to choose used locales
Closes #75
